--- a/Code/SISTORE/src/Presentacion/FIDTabladetalle.form
+++ b/Code/SISTORE/src/Presentacion/FIDTabladetalle.form
@@ -101,10 +101,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="cbcolumna" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="cbcondicion" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="txbusqueda" min="-2" pref="167" max="-2" attributes="0"/>
+                  <Component id="txbusqueda" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -114,7 +112,6 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cbcondicion" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txbusqueda" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="cbcolumna" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -124,23 +121,10 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JComboBox" name="cbcondicion">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Contiene"/>
-                <StringItem index="1" value="Es igual"/>
-                <StringItem index="2" value="=/="/>
-                <StringItem index="3" value="&gt;"/>
-                <StringItem index="4" value="&lt;"/>
-              </StringArray>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-          </AuxValues>
-        </Component>
         <Component class="javax.swing.JTextField" name="txbusqueda">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txbusquedaKeyTyped"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbcolumna">
           <Properties>
